[package]
name = "quadrilateral"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[dependencies]
bodyparser = "0.5.0"
env_logger = "0.4.0"
error-chain = "0.7.2"
iron = "0.5.1"
log = "0.3.6"
logger = "0.3.0"
persistent = "0.3.0"
router = "0.5.0"
serde_json = "0.8.6"
slog = "1.4.0"
slog-scope = "0.2.2"
slog-scope-stdlog = "0.2.0"
slog-term = "1.3.5"
