[package]
name = "quad-diesel"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[dependencies]
clap = "2.20.5"
diesel = { version = "0.11.0", features = ["sqlite"] }
diesel_codegen = { version = "0.11.0", features = ["sqlite"] }
r2d2 = "0.7.1"
r2d2-diesel = { version = "0.11.0", features = ["sqlite"] }
serde = "0.9.0"
serde_derive = "0.9.0"
