[package]
name = "quad-diesel"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[dependencies]
diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
serde = "1.0.0"
serde_derive = "1.0.0"
